# cudnn_samples_v9

./: CMakeLists.txt  README.md  samples_common.mk
RNN_v8.0/: CMakeLists.txt  Makefile  RNN_example.cu  RNN_example.h
cmake/: FindcuDNN.cmake
common/: CMakeLists.txt  error_util.h  fp16_dev.cu  fp16_dev.h  fp16_emu.cpp  fp16_emu.h
conv_sample/: CMakeLists.txt  Makefile  conv_sample.cpp  error_util.h  fp16_dev.cu  fp16_dev.h  fp16_emu.cpp  fp16_emu.h
mnistCUDNN/: CMakeLists.txt  Makefile  error_util.h  fp16_emu.cpp  gemv.h  mnistCUDNN.cpp
multiHeadAttention/: CMakeLists.txt  Makefile  fp16_emu.h  multiHeadAttention.cpp  multiHeadAttention.h
